// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`It renders correcly 1`] = `
<form
  onSubmit={[Function]}
>
  <h1>
    Login
  </h1>
  <div
    className="section"
  >
    <div
      className="row"
    >
      <Field
        className="input"
        component="input"
        name="email"
        placeholder="Email"
        type="email"
      />
    </div>
    <div
      className="row"
    >
      <Field
        className="input"
        component="input"
        name="password"
        placeholder="Password"
        type="password"
      />
    </div>
  </div>
  <div
    className="section"
  >
    <div
      className="row"
    >
      <button
        className="button fullwidth"
        type="submit"
      >
        Login
      </button>
    </div>
    <Link
      className="vanilla"
      replace={false}
      to="/signup"
    >
      Are you a new user?
    </Link>
  </div>
</form>
`;

exports[`It renders correcly 2`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="authError"
  >
    Error message
  </div>
  <h1>
    Login
  </h1>
  <div
    className="section"
  >
    <div
      className="row"
    >
      <Field
        className="input"
        component="input"
        name="email"
        placeholder="Email"
        type="email"
      />
    </div>
    <div
      className="row"
    >
      <Field
        className="input"
        component="input"
        name="password"
        placeholder="Password"
        type="password"
      />
    </div>
  </div>
  <div
    className="section"
  >
    <div
      className="row"
    >
      <button
        className="button fullwidth"
        type="submit"
      >
        Login
      </button>
    </div>
    <Link
      className="vanilla"
      replace={false}
      to="/signup"
    >
      Are you a new user?
    </Link>
  </div>
</form>
`;
